--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <a-nft
             type="nft"
-            url="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex"
+            url="https://raw.githubusercontent.com/GeydarovaEsmira/markers/main/dinamic"
             smooth="true"
             smoothCount="10"
             smoothTolerance=".01"
@@ -50,6 +50,8 @@
                 position="50 150 0"
             >
             </a-entity>
+
+            <a-box color="red" scale="50 50 50"  position="250 150 0"></a-box>
             </a-nft>
             <a-entity camera></a-entity>
         </a-scene>
